--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   postgres-db:
     image: postgres:16
@@ -127,7 +125,7 @@ services:
     build: ./DoAnCNPM_Backend/drone_service
     container_name: drone-service
     ports:
-      - "8086:8086"
+      - "8089:8089"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/foodfast_db
       - SPRING_DATASOURCE_USERNAME=postgres
@@ -135,6 +133,7 @@ services:
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
+      - SERVER_PORT=8089
     depends_on:
       - postgres-db
       - eureka-server
@@ -172,7 +171,7 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - D:/cnpm/CNPM-3/monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
     networks:
@@ -193,6 +192,7 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=1admin1
       - GF_INSTALL_PLUGINS=grafana-piechart-panel
+      - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
       - grafana-data:/var/lib/grafana
       - ./monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
@@ -201,6 +201,37 @@ services:
       - foodfast-net
     depends_on:
       - prometheus
+  k6-exporter:
+    image: node:18-alpine
+    container_name: k6-exporter
+    working_dir: /app
+    volumes:
+      - ./k6/scripts/k6-prometheus-server.js:/app/k6-prometheus-server.js
+      - ./k6-results.json:/app/k6-results.json
+    command: node k6-prometheus-server.js
+    ports:
+      - "6565:6565"
+    networks:
+      - foodfast-net
+    depends_on:
+      - prometheus
+
+  k6:
+    image: grafana/k6:latest
+    container_name: k6
+    volumes:
+      - ./k6/tests:/scripts
+      - ./k6/run-all-tests.sh:/run-all-tests.sh
+    entrypoint: ["/bin/sh", "-c"]
+    command: "sh /run-all-tests.sh"
+    ports:
+      - "9464:9464"
+    networks:
+      - foodfast-net
+    depends_on:
+      - prometheus
+
+
 
 volumes:
   pgdata:
